# agileday-tracker

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  test-api.sh  tsconfig.json
.claude/docs/: api-and-auth.md  architecture.md  conventions.md  domain.md  testing.md  ui-components.md
.github/workflows/: ci.yml  release.yml
specs/: README.md  qte-tokens.css  variant-a-connected-stack.html
specs/agileday-tracker/: Time logging policy.docx  entry-sync.md  openapi.yaml  plan.md  spec.md
specs/feat-description-grouping-setting/: plan.md  spec.md
specs/feat-flatten-entries/: plan.md  spec.md
specs/feat-flex-time-counter/: plan.md  spec.md
specs/feat-simplify-sync/: plan.md
specs/feat-submission-deadline-alert/: plan.md
specs/feat-timesheet-rounding/: plan.md  spec.md
specs/fix-absence-projects-visibility/: plan.md
specs/fix-project-picker-search-allocated/: plan.md  spec.md
specs/inline-card-editing/: plan.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: agileday.ts  auth-manager.ts  auth.ts  mock-core.ts  mock.ts  provider.ts  rounding.ts  types.ts
src/components/: AllocationView.tsx  BillableIndicator.tsx  DayGroup.tsx  EntryEditModal.tsx  Fab.tsx  FinalizeView.tsx  FlexBadge.tsx  FlexSetupAlert.tsx  FlexView.tsx  InactivityBanner.tsx  LoginScreen.tsx  ProjectCard.tsx  ProjectCardList.tsx  ProjectPicker.tsx  Settings.tsx  SettingsView.tsx  SubmissionAlert.tsx  TaskPicker.tsx  (+6 more)
(+28 files in other folders)
